[gd_scene load_steps=4 format=3 uid="uid://bu1rho1p51fpx"]

[ext_resource type="Script" path="res://components/crop/crop.gd" id="1_lgkcc"]
[ext_resource type="Texture2D" uid="uid://dar5pbkyogxup" path="res://assets/Crops/Potato.png" id="2_tfcvi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dud7d"]
radius = 16.0

[node name="Crop" type="Node2D"]
script = ExtResource("1_lgkcc")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(16, 8)
texture = ExtResource("2_tfcvi")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_dud7d")
disabled = true

[node name="GrowthTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
